# ypywidgets

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml  test.yml
src/ypywidgets/: __init__.py  comm.py  reactive.py  widget.py
tests/: conftest.py  test_attributes.py  test_comm.py  utils.py
ypywidgets/: __init__.py  checkbox.py  comm.py  declare.py  reactive.py  switch.py  utils.py  widget.py  ypywidgets.py  yutils.py
ypywidgets/txl/: checkbox.py  switch.py  widget.py
