[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ypywidgets"
version = "0.9.1"
description = "Y-based Jupyter widgets for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "David Brochart", email = "david.brochart@gmail.com" },
]
keywords = [
    "widgets",
    "jupyter",
    "yjs",
]
dependencies = [
    "comm >=0.1.4,<1",
    "pycrdt >=0.9.0,<0.10.0",
    "reacttrs >=0.2.1,<0.3.0",
]

[project.urls]
Homepage = "https://github.com/davidbrochart/ypywidgets"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
